Fixed position navbar obscures anchors (http://stackoverflow.com/questions/9047703)

--- a/src/site/scss/style.scss
+++ b/src/site/scss/style.scss
@@ -224,4 +224,9 @@ footer {
   }
 }
 
+article .has-permalink {
+    padding-top: 40px;
+    margin-top: -40px;
+}
+
 @import "syntax";
